# voice-ai

./: .gitignore  ARCHITECTURE.md  README.md  TECHNICAL_DETAILS.md  celerybeat-schedule  pyproject.toml
apps/calls/: admin.py  api.py  models.py  serializers.py  tasks.py
apps/calls/migrations/: 0001_initial.py
apps/campaigns/: admin.py  api.py  apps.py  models.py  serializers.py
apps/campaigns/migrations/: 0001_initial.py
apps/campaigns/services/: dispatch.py  lifecycle.py  throttle.py
apps/dashboard/: urls.py  views.py
apps/dashboard/templates/dashboard/: _leads_table.html  call_detail.html  campaign_detail.html  campaign_list.html  leads.html  settings.html
apps/dashboard/templatetags/: dashboard_extras.py
apps/leads/: admin.py  api.py  models.py  serializers.py
apps/leads/migrations/: 0001_initial.py
apps/leads/services/: csv_import.py
apps/organizations/: admin.py  models.py
apps/organizations/migrations/: 0001_initial.py  0002_organization_default_voice_id_and_more.py
apps/vapi/: apps.py  client.py  provisioning.py  schemas.py
apps/vapi/management/commands/: provision_vapi.py
apps/webhooks/: handlers.py  urls.py  views.py
config/: celery.py  urls.py
config/settings/: base.py  dev.py  prod.py
templates/: base.html
templates/registration/: login.html
tests/: conftest.py  test_csv_import.py  test_dispatch.py  test_vapi_client.py  test_webhooks.py
